fixing helper method

--- a/apache-beam-lab.ipynb
+++ b/apache-beam-lab.ipynb
@@ -101,8 +101,10 @@
     "    print('')\n",
     "\n",
     "def get_words_from_file():\n",
+    "    words_list = []\n",
     "    with open(\"data.txt\", \"r\") as f:\n",
-    "    words_list = f.read().split()"
+    "        words_list = f.read().split()\n",
+    "    return words_list"
    ]
   },
   {
