Updates to lab file

--- a/apache-beam-lab.ipynb
+++ b/apache-beam-lab.ipynb
@@ -7,8 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/twrobel/apache-beam-lab/blob/master/apache-beam-lab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
-    "  "
+    "<a href=\"https://colab.research.google.com/github/apache/beam/blob/master/examples/notebooks/tour-of-beam/getting-started.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -167,7 +166,7 @@
    },
    "source": [
     "Now let's dive into creating our first pipeline.\n",
-    "\n",
+    " \n",
     "For this first pipeline, let's just feed it some data from a Python list and print the results.\n",
     "\n",
     "Each _step_ in the pipeline is delimited by the _pipe operator_ `|`.\n",
