--- a/apache-beam-lab-advanced.ipynb
+++ b/apache-beam-lab-advanced.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/twrobel/apache-beam-lab/blob/main/apache-beam-lab-advanced.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction\n",
     "## Windows - What are they good for?\n",
     "\n",
@@ -97,13 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Invalid requirement: \"'apache-beam[interactive]'\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Install apache-beam with pip.\n",
     "!pip install --quiet 'apache-beam[interactive]' "
@@ -111,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -186,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -195,30 +210,30 @@
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "6\n",
       "5\n",
       "3\n",
       "6\n",
       "2\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
     "class ComputeWordLengthFn(beam.DoFn):\n",
-    "  def process(self, element):\n",
-    "    return [len(element)]\n",
+    "    def process(self, element):\n",
+    "        return [len(element)]\n",
     "\n",
     "words = ['Person', 'Woman', 'Man', 'Camera', 'TV']\n",
     "\n",
     "with beam.Pipeline() as pipeline:\n",
-    "  outputs = (\n",
-    "      pipeline\n",
-    "      | 'Create values' >> beam.Create(words)\n",
-    "      | 'Compute word length' >> beam.ParDo(ComputeWordLengthFn())\n",
-    "  )\n",
-    "  outputs | beam.Map(print)"
+    "    outputs = (\n",
+    "        pipeline\n",
+    "        | 'Create values' >> beam.Create(words)\n",
+    "        | 'Compute word length' >> beam.ParDo(ComputeWordLengthFn())\n",
+    "    )\n",
+    "    outputs | beam.Map(print)"
    ]
   },
   {
@@ -242,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -251,19 +266,19 @@
    "outputs": [],
    "source": [
     "class CountVowelsFn(beam.DoFn):\n",
-    "  def process(self, element):\n",
-    "    return #YOUR CODE HERE\n",
+    "    def process(self, element):\n",
+    "        return #YOUR CODE HERE\n",
     "\n",
     "\n",
     "words = ['Person', 'Woman', 'Man', 'Camera', 'TV']\n",
     "\n",
     "with beam.Pipeline() as pipeline:\n",
-    "  outputs = (\n",
-    "      pipeline\n",
-    "      | 'Create values' >> beam.Create(words)\n",
-    "      | 'Compute word length' >> beam.ParDo(CountVowelsFn())\n",
-    "  )\n",
-    "  outputs | beam.Map(print)"
+    "    outputs = (\n",
+    "        pipeline\n",
+    "        | 'Create values' >> beam.Create(words)\n",
+    "        | 'Compute word length' >> beam.ParDo(CountVowelsFn())\n",
+    "    )\n",
+    "    outputs | beam.Map(print)"
    ]
   },
   {
@@ -286,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -295,18 +310,17 @@
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2020-03-04 00:00:00 - 1 - 🐹\n",
       "2020-03-05 00:00:00 - 2 - 🐼\n",
       "2020-03-06 00:00:00 - 3 - 🐰\n",
       "2020-03-07 00:00:00 - 4 - 🐹\n",
       "2020-03-08 00:00:00 - 5 - 🐰\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
-    "    \n",
     "class AnimalSightingEvent:\n",
     "    def __init__(self, id, animal, timestamp):\n",
     "        self.id = id\n",
@@ -319,8 +333,8 @@
     "        yield beam.window.TimestampedValue(element, unix_timestamp)\n",
     "        \n",
     "class GetTimestampFn(beam.DoFn):\n",
-    "  def process(self, element, timestamp=beam.DoFn.TimestampParam):\n",
-    "    yield '{} - {} - {}'.format(timestamp.to_utc_datetime(), element.id, element.animal)\n",
+    "    def process(self, element, timestamp=beam.DoFn.TimestampParam):\n",
+    "        yield '{} - {} - {}'.format(timestamp.to_utc_datetime(), element.id, element.animal)\n",
     "        \n",
     "inputs = [\n",
     "    AnimalSightingEvent('1', '🐹', dtime(yy=2020, mm=3, day=4)),\n",
@@ -331,14 +345,13 @@
     "]\n",
     "\n",
     "with beam.Pipeline() as pipeline:\n",
-    "  outputs = (\n",
+    "    outputs = (\n",
     "      pipeline\n",
     "      | 'Create animal sightings' >> beam.Create(inputs)\n",
     "      | 'Add timestamps' >> beam.ParDo(AddTimestampFn())\n",
     "      | 'Get timestamps' >> beam.ParDo(GetTimestampFn())\n",
-    "  )\n",
-    "\n",
-    "  outputs | beam.Map(print)"
+    "    )\n",
+    "    outputs | beam.Map(print)"
    ]
   },
   {
@@ -360,22 +373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
-   "outputs": [
-    {
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-7fd832aea7af>\"\u001b[0;36m, line \u001b[0;32m28\u001b[0m\n\u001b[0;31m    | # YOUR CODE HERE\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ],
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-7fd832aea7af>, line 28)",
-     "output_type": "error"
-    }
-   ],
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class FoodSightingEvent:\n",
     "    def __init__(self, id, food, timestamp):\n",
@@ -389,9 +389,29 @@
     "        yield beam.window.TimestampedValue(element, unix_timestamp)\n",
     "        \n",
     "class GetTimestampFn(beam.DoFn):\n",
-    "  def process(self, element, timestamp=beam.DoFn.TimestampParam):\n",
-    "    yield '{} - {} - {}'.format(timestamp.to_utc_datetime(), element.id, element.food)\n",
-    "        \n",
+    "    def process(self, element, timestamp=beam.DoFn.TimestampParam):\n",
+    "        yield '{} - {} - {}'.format(timestamp.to_utc_datetime(), element.id, element.food)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-36-76c8e288e570>, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-36-76c8e288e570>\"\u001b[1;36m, line \u001b[1;32m13\u001b[0m\n\u001b[1;33m    | # YOUR CODE HERE\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
     "inputs = [\n",
     "    FoodSightingEvent('1', '🌽', dtime(yy=2020, mm=3, day=4)),\n",
     "    FoodSightingEvent('2', '🌽', dtime(yy=2020, mm=3, day=5)),\n",
@@ -401,21 +421,20 @@
     "]\n",
     "\n",
     "with beam.Pipeline() as pipeline:\n",
-    "  outputs = (\n",
+    "    outputs = (\n",
     "      pipeline \n",
     "      | # YOUR CODE HERE \n",
     "      | # YOUR CODE HERE\n",
     "      | # YOUR CODE HERE\n",
-    "  )\n",
-    "\n",
-    "  outputs | beam.Map(print)"
+    "    )\n",
+    "    outputs | beam.Map(print)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### WIP Exercise 3 - Count events using fixed windows\n",
+    "### Exercise 3 - Count events using fixed windows\n",
     "Count the number of events that happened based on a fixed window with 1-minute duration.\n",
     "\n",
     "#### Expected Output\n",
@@ -439,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -447,30 +466,15 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "text": [
-      "('🌽', 1)\n",
-      "('🥕', 2)\n",
-      "('🥕', 2)\n",
-      "('🥕', 3)\n",
-      "('🐰', 1)\n",
-      "('🐰', 1)\n"
-     ],
-     "output_type": "stream"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-37-4af8bc1ec484>, line 20)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-37-4af8bc1ec484>\"\u001b[1;36m, line \u001b[1;32m20\u001b[0m\n\u001b[1;33m    | # YOUR CODE HERE\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "class FoodSightingEvent:\n",
-    "    def __init__(self, id, food, timestamp):\n",
-    "        self.id = id\n",
-    "        self.food = food\n",
-    "        self.timestamp = timestamp\n",
-    "        \n",
-    "class AddTimestampFn(beam.DoFn):\n",
-    "    def process(self, element, **kwargs):\n",
-    "        unix_timestamp = element.timestamp.timestamp()\n",
-    "        yield beam.window.TimestampedValue(element, unix_timestamp)\n",
-    "\n",
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
     "          # Window 0:\n",
@@ -499,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### WIP Exercise 4 - Count events using sliding windows\n",
+    "### Exercise 4 - Count events using sliding windows\n",
     "\n",
     "Same input as last time, but now after every 30 seconds (the period) we want to calculate the number of elements that \n",
     "arrived over the last minute (i.e. the duration). \n",
@@ -535,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -543,28 +547,15 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "text": [
-      "('🌽', 1)\n",
-      "('🌽', 1)\n",
-      "('🥕', 2)\n",
-      "('🥕', 2)\n",
-      "('🥕', 2)\n",
-      "('🥕', 1)\n",
-      "('🥕', 1)\n",
-      "('🥕', 3)\n",
-      "('🥕', 2)\n",
-      "('🥕', 1)\n",
-      "('🐰', 1)\n",
-      "('🐰', 1)\n",
-      "('🐰', 1)\n",
-      "('🐰', 1)\n"
-     ],
-     "output_type": "stream"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-38-89ae67cb9bb1>, line 20)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-38-89ae67cb9bb1>\"\u001b[1;36m, line \u001b[1;32m20\u001b[0m\n\u001b[1;33m    | # YOUR CODE HERE\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "from apache_beam.utils.timestamp import Duration\n",
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
     "          FoodSightingEvent('1', '🌽', dtime(hour=1, min=1, sec=5)),\n",
@@ -593,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### WIP Exercise 5 - Count events using session windows\n",
+    "### Exercise 5 - Count events using session windows\n",
     "\n",
     "In this example, lets try counting events that occur in a given session window. Recall that a new Session window is \n",
     "created whenever Beam sees a specifed gap size (i.e. a period of time with no data elements), Let's use a gap size of \n",
@@ -615,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -623,15 +614,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "text": [
-      "('🌽', 1)\n",
-      "('🥕', 2)\n",
-      "('🥕', 5)\n",
-      "('🐰', 1)\n",
-      "('🐰', 1)\n"
-     ],
-     "output_type": "stream"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-39-8f0b757e6c99>, line 20)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-39-8f0b757e6c99>\"\u001b[1;36m, line \u001b[1;32m20\u001b[0m\n\u001b[1;33m    | # YOUR CODE HERE\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -663,35 +651,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### WIP Exercise 6 - Count events using Global windows"
+    "### Exercise 6 - Count events using global windows\n",
+    "In this example, lets try counting events that occur in a global window. \n",
+    "\n",
+    "#### Hints\n",
+    "\n",
+    "You need to use a Glboal Window: beam.window.GlobalWindows()\n",
+    "\n",
+    "#### Expected Output\n",
+    "```\n",
+    "('🌽', 1)\n",
+    "('🥕', 7)\n",
+    "('🐰', 2)\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-40-fd9017dc7f48>, line 20)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-40-fd9017dc7f48>\"\u001b[1;36m, line \u001b[1;32m20\u001b[0m\n\u001b[1;33m    | # YOUR CODE HERE\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
-    "          beam.window.TimestampedValue(\"event\", datetime(2020, 3, 1, 0, 0, 0, 0, tzinfo=pytz.UTC).timestamp()),\n",
-    "          beam.window.TimestampedValue(\"event\", datetime(2020, 3, 1, 0, 0, 0, 0, tzinfo=pytz.UTC).timestamp()),\n",
-    "          beam.window.TimestampedValue(\"event\", datetime(2020, 3, 1, 0, 0, 0, 0, tzinfo=pytz.UTC).timestamp()),\n",
-    "          beam.window.TimestampedValue(\"event\", datetime(2020, 3, 1, 0, 0, 0, 0, tzinfo=pytz.UTC).timestamp()),\n",
-    "          beam.window.TimestampedValue(\"event\", datetime(2020, 3, 5, 0, 0, 0, 0, tzinfo=pytz.UTC).timestamp()),\n",
-    "          beam.window.TimestampedValue(\"event\", datetime(2020, 3, 5, 0, 0, 0, 0, tzinfo=pytz.UTC).timestamp()),\n",
-    "          beam.window.TimestampedValue(\"event\", datetime(2020, 3, 8, 0, 0, 0, 0, tzinfo=pytz.UTC).timestamp()),\n",
-    "          beam.window.TimestampedValue(\"event\", datetime(2020, 3, 8, 0, 0, 0, 0, tzinfo=pytz.UTC).timestamp()),\n",
-    "          beam.window.TimestampedValue(\"event\", datetime(2020, 3, 8, 0, 0, 0, 0, tzinfo=pytz.UTC).timestamp()),\n",
-    "          beam.window.TimestampedValue(\"event\", datetime(2020, 3, 10, 0, 0, 0, 0, tzinfo=pytz.UTC).timestamp()),\n",
+    "          FoodSightingEvent('1', '🌽', dtime(hour=1, min=1, sec=5)),\n",
+    "          FoodSightingEvent('2', '🥕', dtime(hour=1, min=1, sec=15)),\n",
+    "          FoodSightingEvent('3', '🥕', dtime(hour=1, min=1, sec=16)),\n",
+    "          FoodSightingEvent('4', '🐰', dtime(hour=1, min=1, sec=59)),\n",
+    "      \n",
+    "          FoodSightingEvent('5', '🥕', dtime(hour=1, min=31, sec=18)),\n",
+    "          FoodSightingEvent('6', '🥕', dtime(hour=1, min=31, sec=36)),\n",
+    "      \n",
+    "          FoodSightingEvent('7', '🥕', dtime(hour=1, min=34, sec=1)),\n",
+    "          FoodSightingEvent('8', '🥕', dtime(hour=1, min=34, sec=18)),\n",
+    "          FoodSightingEvent('9', '🥕', dtime(hour=1, min=34, sec=51)),\n",
+    "      \n",
+    "          FoodSightingEvent('10', '🐰', dtime(hour=2, min=34, sec=51)),\n",
     "       ])\n",
-    "     | beam.WindowInto(beam.window.GlobalWindows())\n",
-    "     | beam.combiners.Count.PerElement()\n",
-    "     | beam.Map(print))"
+    "   \n",
+    "   | 'Add timestamps' >> beam.ParDo(AddTimestampFn())\n",
+    "   | # YOUR CODE HERE \n",
+    "   | # YOUR CODE HERE \n",
+    "   | # YOUR CODE HERE \n",
+    "   | beam.Map(print))"
    ]
   },
   {
@@ -721,15 +736,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
