--- a/apache-beam-lab.ipynb
+++ b/apache-beam-lab.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apache Beam Lab\n",
+    "# Apache Beam Lab Setup\n",
     "\n",
     "Let's begin by installing the `apache-beam` package with `pip`."
    ]
@@ -77,6 +77,13 @@
    ]
   },
   {
+   "source": [
+    "Now initialize some helper functions"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -88,6 +95,7 @@
     "    !{cmd}\n",
     "    print('')\n",
     "\n",
+    "# Retrieve sample file with text and split it into words\n",
     "import requests\n",
     "def get_words_from_file():\n",
     "    url = 'https://raw.githubusercontent.com/twrobel/apache-beam-lab/main/data.txt'\n",
@@ -96,15 +104,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "WwxLB5EiVKP_"
-   },
    "source": [
-    "You can express a _data processing pipeline_, and then run it on the\n",
-    "[_runner_ of your choice](https://beam.apache.org/documentation/runners/capability-matrix/).\n",
-    "For now, we use the `DirectRunner` which runs locally for simplicity."
-   ]
+    "# Basic concepts"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -112,7 +116,7 @@
     "id": "8rfQeLk2y9lx"
    },
    "source": [
-    "# What is a _pipeline_?\n",
+    "#  _pipeline_\n",
     "\n",
     "A __pipeline__ is a __sequence of data transformations__.\n",
     "You can think of it like a production line,\n",
@@ -138,17 +142,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "LaljqKvs4UU5"
-   },
    "source": [
+    "# _transform_\n",
     "Once you have your data, the next step is to transform it.\n",
     "In Beam, you transform data using **`PTransform`**s,\n",
     "which stands for _Parallel Transform_.\n",
     "A `PTransform` is like a __function__,\n",
     "they take some inputs, transform them and create some outputs."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -165,10 +168,7 @@
     "id": "SVk4BsuKVlLj"
    },
    "source": [
-    "Now let's dive into creating our first pipeline.\n",
-    " \n",
-    "For this first pipeline, let's just feed it some data from a Python list and print the results.\n",
-    "\n",
+    "# Setting up a sequence of transforms\n",
     "Each _step_ in the pipeline is delimited by the _pipe operator_ `|`.\n",
     "The outputs of each transform are passed to the next transform as inputs.\n",
     "And we can save the final results into a `PCollection` variable.\n",
@@ -205,71 +205,9 @@
     ")\n",
     "```\n",
     "\n",
-    "> ℹ️&nbsp; The syntax might seem a little different at first, but you'll become familiar with it.\n",
-    "\n",
     "We use the `Create` transform to feed the pipeline with an\n",
     "[`iterable`](https://docs.python.org/3/glossary.html#term-iterable)\n",
-    "of elements, like a `list`.\n",
-    "\n",
-    "Let's try to see what happens if we try to `print` a PCollection."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "XAke4d5lV5f5",
-    "outputId": "eaf5954c-3a66-4ef7-a258-35797ce0bbb9"
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "WARNING:apache_beam.runners.interactive.interactive_environment:Dependencies required for Interactive Beam PCollection visualization are not available, please use: `pip install apache-beam[interactive]` to install necessary dependencies to enable all data visualization features.\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n          });\n        }"
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/javascript": "\n        var import_html = () => {\n          ['https://raw.githubusercontent.com/PAIR-code/facets/1.0.0/facets-dist/facets-jupyter.html'].forEach(href => {\n            var link = document.createElement('link');\n            link.rel = 'import'\n            link.href = href;\n            document.head.appendChild(link);\n          });\n        }\n        if ('import' in document.createElement('link')) {\n          import_html();\n        } else {\n          var webcomponentScript = document.createElement('script');\n          webcomponentScript.src = 'https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.3.3/webcomponents-lite.js';\n          webcomponentScript.type = 'text/javascript';\n          webcomponentScript.onload = function(){\n            import_html();\n          };\n          document.head.appendChild(webcomponentScript);\n        }"
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "outputs: PCollection[[3]: Create initial values/Map(decode).None]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import apache_beam as beam\n",
-    "\n",
-    "inputs = [0, 1, 2, 3]\n",
-    "\n",
-    "# Create a pipeline.\n",
-    "with beam.Pipeline() as pipeline:\n",
-    "  # Feed it some input elements with `Create`.\n",
-    "  outputs = (\n",
-    "      pipeline\n",
-    "      | 'Create initial values' >> beam.Create(inputs)\n",
-    "  )\n",
-    "\n",
-    "  # `outputs` is a PCollection with our input elements.\n",
-    "  # But printing it directly won't show us its contents :(\n",
-    "  print(f\"outputs: {outputs}\")"
+    "of elements, like a `list`."
    ]
   },
   {
@@ -377,9 +315,7 @@
     "# Transforming data\n",
     "\n",
     "Apache Beam is designed with a [functional paradigm](https://en.wikipedia.org/wiki/Functional_programming).\n",
-    "This means that, instead of _loops_, it uses `PTransform`s alongside with _functions_ to process each element in a `PCollection`.\n",
-    "\n",
-    "Let's go through some of the most common and basic data transforms in Beam."
+    "This means that, instead of _loops_, it uses `PTransform`s alongside with _functions_ to process each element in a `PCollection`.\n"
    ]
   },
   {
@@ -394,9 +330,7 @@
     "\n",
     "We want to `map` a function to each element of the collection.\n",
     "\n",
-    "`map` takes a _function_ that transforms a single input `a` into a single output `b`.\n",
-    "\n",
-    "> ℹ️ -- For example, we want to multiply each element by 2."
+    "`map` takes a _function_ that transforms a single input `a` into a single output `b`.\n"
    ]
   },
   {
@@ -410,23 +344,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "4vaBuNFW-5FG"
-   },
+   "metadata": {},
    "source": [
+    "# Example 2\n",
     "In Beam, there is the\n",
     "[`Map` transform](https://beam.apache.org/documentation/transforms/python/elementwise/map/),\n",
     "but we must use it within a pipeline.\n",
     "\n",
     "First we create a pipeline and feed it our input elements.\n",
     "Then we _pipe_ those elements into a `Map` transform where we apply our function."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Example 2"
    ]
   },
   {
@@ -538,10 +464,7 @@
     "Then we want to _flatten_ the _list of lists_ into a single _list_.\n",
     "\n",
     "`flatMap` takes a function that transforms a single input `a` into an `iterable` of outputs `b`.\n",
-    "But we get a _single collection_ containing the outputs of _all_ the elements.\n",
-    "\n",
-    "> ℹ️ -- For example, we want to have as many elements as the element's value.\n",
-    "> For a value `1` we want one element, and three elements for a value `3`."
+    "But we get a _single collection_ containing the outputs of _all_ the elements."
    ]
   },
   {
@@ -555,22 +478,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "OP3bSQoYMOH6"
-   },
+   "metadata": {},
    "source": [
+    "# Example 3\n",
     "The good news is that Beam already has a\n",
     "[`FlatMap` transform](https://beam.apache.org/documentation/transforms/python/elementwise/flatmap/)\n",
     "built-in, so it's actually easier than plain Python.\n",
     "\n",
     "`FlatMap` accepts a function that takes a single input element and outputs an `iterable` of elements."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Example 3"
    ]
   },
   {
@@ -690,12 +605,7 @@
     "We want to `filter` each element in a collection using a function.\n",
     "\n",
     "`filter` takes a function that checks a single element `a`,\n",
-    "and returns `True` to keep the element, or `False` to discard it.\n",
-    "\n",
-    "> ℹ️ -- For example, we only want to keep number that are *even*, or divisible by two.\n",
-    "> We can use the\n",
-    "> [modulo operator `%`](https://en.wikipedia.org/wiki/Modulo_operation)\n",
-    "> for a simple check."
+    "and returns `True` to keep the element, or `False` to discard it.\n"
    ]
   },
   {
@@ -713,15 +623,9 @@
     "id": "mtVSijNAc0Fi"
    },
    "source": [
+    "# Example 4\n",
     "In Beam, there is the\n",
     "[`Filter` transform](https://beam.apache.org/documentation/transforms/python/elementwise/filter/)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Example 4"
    ]
   },
   {
@@ -831,9 +735,7 @@
     "\n",
     "`combine` takes a function that transforms an `iterable` of inputs `a`, and returns a single output `a`.\n",
     "\n",
-    "Other common names for this function are `fold` and `reduce`.\n",
-    "\n",
-    "> ℹ️ -- For example, we want to add all numbers together."
+    "Other common names for this function are `fold` and `reduce`.\n"
    ]
   },
   {
@@ -847,10 +749,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "kotSZnlZoO8D"
-   },
+   "metadata": {},
    "source": [
+    "# Example 5\n",
     "In Beam, there are\n",
     "[aggregation transforms](https://beam.apache.org/documentation/transforms/python/overview/#aggregation).\n",
     "\n",
@@ -861,13 +762,6 @@
     "We can pass the\n",
     "[built-in function `sum`](https://docs.python.org/3/library/functions.html#sum)\n",
     "into `CombineGlobally`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Example 5"
    ]
   },
   {
@@ -967,9 +861,7 @@
     "[Python `dict`](https://docs.python.org/3/tutorial/datastructures.html#dictionaries)\n",
     "from a list of `(key, value)` pairs,\n",
     "but instead of replacing the value on a \"duplicate\" key,\n",
-    "you would get a list of all the values associated with that key.\n",
-    "\n",
-    "> ℹ️ -- For example, we want to group each animal with the list of foods they like, and we start with `(animal, food)` pairs."
+    "you would get a list of all the values associated with that key."
    ]
   },
   {
@@ -987,6 +879,7 @@
     "id": "1EmT-9Zawa_q"
    },
    "source": [
+    "# Example 6\n",
     "In Beam, there is the\n",
     "[`GroupByKey` transform](https://beam.apache.org/documentation/transforms/python/aggregation/groupbykey/)."
    ]
@@ -1146,7 +1039,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Word count example\n",
+    "# Exercise 8 - Word count\n",
     "\n",
     "The following example is the \"Hello, World!\" of data processing, a basic implementation of word count. We're creating a simple data processing pipeline that reads a text file and counts the number of occurrences of every word.\n",
     "\n",
