--- a/apache-beam-lab.ipynb
+++ b/apache-beam-lab.ipynb
@@ -21,6 +21,15 @@
    "source": [
     "![image.png](attachment:image.png)\n",
     "\n",
+    "# Agenda\n",
+    "1. Intro to Jupyter notebook\n",
+    "2. What is Apache Beam?\n",
+    "3. Apache Beam basic concepts\n",
+    "4. Exercises - apache-beam-lab.ipynb\n",
+    "4. Advanced Concepts - apache-beam-lab-advanced.ipynb\n",
+    "\n",
+    "\n",
+    "\n",
     "# What is Apache Beam? \n",
     "\n",
     "\n",
@@ -61,8 +70,25 @@
    "source": [
     "# Apache Beam Lab Setup\n",
     "\n",
-    "Let's begin by installing the `apache-beam` package with `pip`."
+    "Jupyter notebook 'Hello World'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"\"\n",
+    "print(f\"Hello {name} from Jupyter notebook!\")"
+   ]
+  },
+  {
+   "source": [
+    "Let's begin by installing the `apache-beam` package with `pip`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -129,7 +155,7 @@
     "A `PCollection` is like a __list of elements__,\n",
     "but without any order guarantees.\n",
     "This allows Beam to easily parallelize and distribute\n",
-    "the `PCollection`'s elements."
+    "the `PCollection`'s elements. It can be used for batch or streaming type of operations."
    ]
   },
   {
@@ -315,7 +341,7 @@
     "# Transforming data\n",
     "\n",
     "Apache Beam is designed with a [functional paradigm](https://en.wikipedia.org/wiki/Functional_programming).\n",
-    "This means that, instead of _loops_, it uses `PTransform`s alongside with _functions_ to process each element in a `PCollection`.\n"
+    "It uses `PTransform`s alongside with _functions_ to process each element in a `PCollection`.\n"
    ]
   },
   {
@@ -1154,13 +1180,6 @@
     "  )\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
