--- a/apache-beam-lab-advanced.ipynb
+++ b/apache-beam-lab-advanced.ipynb
@@ -97,7 +97,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "##  Setup"
    ]
@@ -121,7 +125,8 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -168,7 +173,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Example - ParDo Transform\n",
     "#### A ParDo transform considers each element in the input PCollection, performs some processing function (your user code) on that element, and emits zero, one, or multiple elements to an output PCollection.\n",
@@ -196,7 +205,8 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -218,7 +228,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Exercise 1 \n",
     "### Use a ParDo transform to count vowels in each word\n",
@@ -240,7 +254,8 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -263,7 +278,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Example - Add timestamp to animal sighting events\n",
     "#### You can assign new timestamps to the elements of a PCollection by applying a ParDo transform that outputs new elements with timestamps that you set.  \n",
@@ -284,7 +303,8 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -324,7 +344,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Exercise 2 - Add timestamp to food sighting events\n",
     "Create a pipeline of food sighting events. Use the timestamp field from the food sighting events to add a timestamp to elements of the PCollection. Finally, print out the timestamps for each element.\n",
@@ -342,7 +366,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class FoodSightingEvent:\n",
@@ -528,7 +556,7 @@
     "### Exercise 5 - Count events using session windows\n",
     "\n",
     "In this example, lets try counting events that occur in a given session window. Recall that a new Session window is \n",
-    "created whenever Beam sees a specifed gap size (i.e. a period of time with no data elements), Let's use a gap size of \n",
+    "created whenever Beam sees a specifed gap size (i.e. a period of time with no data elements). Let's use a gap size of 5\n",
     "minutes.   \n",
     "\n",
     "#### Hints\n",
@@ -581,7 +609,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Exercise 6 - Count events using global windows\n",
     "In this example, lets try counting events that occur in a global window. \n",
@@ -596,6 +623,54 @@
     "('🥕', 7)\n",
     "('🐰', 2)\n",
     "```"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "with beam.Pipeline() as p:\n",
+    "  (p | beam.Create([\n",
+    "          FoodSightingEvent('1', '🌽', dtime(hour=1, min=1, sec=5)),\n",
+    "          FoodSightingEvent('2', '🥕', dtime(hour=1, min=1, sec=15)),\n",
+    "          FoodSightingEvent('3', '🥕', dtime(hour=1, min=1, sec=16)),\n",
+    "          FoodSightingEvent('4', '🐰', dtime(hour=1, min=1, sec=59)),\n",
+    "      \n",
+    "          FoodSightingEvent('5', '🥕', dtime(hour=1, min=31, sec=18)),\n",
+    "          FoodSightingEvent('6', '🥕', dtime(hour=1, min=31, sec=36)),\n",
+    "      \n",
+    "          FoodSightingEvent('7', '🥕', dtime(hour=1, min=34, sec=1)),\n",
+    "          FoodSightingEvent('8', '🥕', dtime(hour=1, min=34, sec=18)),\n",
+    "          FoodSightingEvent('9', '🥕', dtime(hour=1, min=34, sec=51)),\n",
+    "      \n",
+    "          FoodSightingEvent('10', '🐰', dtime(hour=2, min=34, sec=51)),\n",
+    "       ])\n",
+    "   \n",
+    "   | 'Add timestamps' >> beam.ParDo(AddTimestampFn())\n",
+    "   | # YOUR CODE HERE \n",
+    "   | # YOUR CODE HERE \n",
+    "   | # YOUR CODE HERE \n",
+    "   | beam.Map(print))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "Apache Beam Katas\n",
+    "\n",
+    "https://beam.apache.org/documentation/programming-guide"
    ]
   },
   {
@@ -664,10 +739,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
