--- a/apache-beam-lab-advanced.ipynb
+++ b/apache-beam-lab-advanced.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -365,10 +365,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
     }
    },
    "outputs": [],
@@ -391,13 +392,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n          });\n        }"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": "\n        var import_html = () => {\n          ['https://raw.githubusercontent.com/PAIR-code/facets/1.0.0/facets-dist/facets-jupyter.html'].forEach(href => {\n            var link = document.createElement('link');\n            link.rel = 'import'\n            link.href = href;\n            document.head.appendChild(link);\n          });\n        }\n        if ('import' in document.createElement('link')) {\n          import_html();\n        } else {\n          var webcomponentScript = document.createElement('script');\n          webcomponentScript.src = 'https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.3.3/webcomponents-lite.js';\n          webcomponentScript.type = 'text/javascript';\n          webcomponentScript.onload = function(){\n            import_html();\n          };\n          document.head.appendChild(webcomponentScript);\n        }"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "text": [
+      "2020-03-04 00:00:00 - 1 - 🌽\n",
+      "2020-03-05 00:00:00 - 2 - 🌽\n",
+      "2020-03-06 00:00:00 - 3 - 🥕\n",
+      "2020-03-07 00:00:00 - 4 - 🥕\n",
+      "2020-03-08 00:00:00 - 5 - 🌽\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "inputs = [\n",
     "    FoodSightingEvent('1', '🌽', dtime(yy=2020, mm=3, day=4)),\n",
@@ -445,13 +472,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-3bb321509d61>\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    | # YOUR CODE HERE\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ],
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-3bb321509d61>, line 20)",
+     "output_type": "error"
+    }
+   ],
    "source": [
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
@@ -483,8 +519,9 @@
    "source": [
     "### Exercise 4 - Count events using sliding windows\n",
     "\n",
-    "Same input as last time, but now after every 30 seconds (the period) we want to calculate the number of elements that \n",
-    "arrived over the last minute (i.e. the duration). \n",
+    "Now lets consider sliding windows. After every 30 seconds (the period) we want to calculate the number of elements that \n",
+    "arrived over the last minute (i.e. the duration). We are going to use a different input on this example to help ensure \n",
+    "the output is easier to understand. \n",
     "\n",
     "#### Hints\n",
     "\n",
@@ -495,16 +532,10 @@
     "```\n",
     "('🌽', 1)\n",
     "('🌽', 1)\n",
-    "('🥕', 2)\n",
-    "('🥕', 2)\n",
-    "('🥕', 2)\n",
-    "('🥕', 1)\n",
-    "('🥕', 1)\n",
-    "('🥕', 3)\n",
-    "('🥕', 2)\n",
-    "('🥕', 1)\n",
-    "('🐰', 1)\n",
-    "('🐰', 1)\n",
+    "('🍏', 1)\n",
+    "('🍏', 1)\n",
+    "('🍕', 1)\n",
+    "('🍕', 1)\n",
     "('🐰', 1)\n",
     "('🐰', 1)\n",
     "```\n",
@@ -512,40 +543,51 @@
     "\n",
     "- Window 0 [01:00:30, 01:01:30) <=> '🌽' 01:01:05\n",
     "- Window 1 [01:01:00, 01:02:00) <=> '🌽' 01:01:05\n",
-    "- Window 2 [01:01:30, 01:02:30) "
+    "- Window 2 [01:01:30, 01:02:30) \n",
+    "\n",
+    "Try experimenting with different periods to the result on the output! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "('🌽', 1)\n",
+      "('🌽', 1)\n",
+      "('🍏', 1)\n",
+      "('🍏', 1)\n",
+      "('🍕', 1)\n",
+      "('🍕', 1)\n",
+      "('🐰', 1)\n",
+      "('🐰', 1)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
     "          FoodSightingEvent('1', '🌽', dtime(hour=1, min=1, sec=5)),\n",
-    "          FoodSightingEvent('2', '🥕', dtime(hour=1, min=1, sec=15)),\n",
-    "          FoodSightingEvent('3', '🥕', dtime(hour=1, min=1, sec=16)),\n",
-    "          FoodSightingEvent('4', '🐰', dtime(hour=1, min=1, sec=59)),\n",
     "      \n",
-    "          FoodSightingEvent('5', '🥕', dtime(hour=1, min=31, sec=18)),\n",
-    "          FoodSightingEvent('6', '🥕', dtime(hour=1, min=31, sec=36)),\n",
+    "          FoodSightingEvent('2', '🍏', dtime(hour=1, min=31, sec=36)),\n",
     "      \n",
-    "          FoodSightingEvent('7', '🥕', dtime(hour=1, min=34, sec=1)),\n",
-    "          FoodSightingEvent('8', '🥕', dtime(hour=1, min=34, sec=18)),\n",
-    "          FoodSightingEvent('9', '🥕', dtime(hour=1, min=34, sec=51)),\n",
+    "          FoodSightingEvent('3', '🍕', dtime(hour=1, min=34, sec=1)),\n",
     "      \n",
-    "          FoodSightingEvent('10', '🐰', dtime(hour=2, min=34, sec=51)),\n",
+    "          FoodSightingEvent('4', '🐰', dtime(hour=2, min=34, sec=51)),\n",
     "       ])\n",
     "\n",
     "     | 'Add timestamps' >> beam.ParDo(AddTimestampFn())\n",
     "     | # YOUR CODE HERE \n",
     "     | # YOUR CODE HERE \n",
-    "     | # YOUR CODE HERE \n",
+    "     | # YOUR CODE HERE\n",
     "     | beam.Map(print))"
    ]
   },
