Exercise #5  - Advanced Notebook.
Modified input and expected output to make it more intuitive.

--- a/apache-beam-lab-advanced.ipynb
+++ b/apache-beam-lab-advanced.ipynb
@@ -607,30 +607,38 @@
     "\n",
     "#### Expected Output\n",
     "```\n",
-    "('🌽', 1)\n",
-    "('🥕', 2)\n",
+    "('🌽', 4)\n",
     "('🥕', 5)\n",
-    "('🐰', 1)\n",
     "('🐰', 1)\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "('🌽', 4)\n",
+      "('🥕', 5)\n",
+      "('🐰', 1)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
     "          FoodSightingEvent('1', '🌽', dtime(hour=1, min=1, sec=5)),\n",
-    "          FoodSightingEvent('2', '🥕', dtime(hour=1, min=1, sec=15)),\n",
-    "          FoodSightingEvent('3', '🥕', dtime(hour=1, min=1, sec=16)),\n",
-    "          FoodSightingEvent('4', '🐰', dtime(hour=1, min=1, sec=59)),\n",
+    "          FoodSightingEvent('2', '🌽', dtime(hour=1, min=1, sec=15)),\n",
+    "          FoodSightingEvent('3', '🌽', dtime(hour=1, min=1, sec=16)),\n",
+    "          FoodSightingEvent('4', '🌽', dtime(hour=1, min=1, sec=59)),\n",
     "      \n",
     "          FoodSightingEvent('5', '🥕', dtime(hour=1, min=31, sec=18)),\n",
     "          FoodSightingEvent('6', '🥕', dtime(hour=1, min=31, sec=36)),\n",
@@ -643,9 +651,9 @@
     "       ])\n",
     "  \n",
     "     | 'Add timestamps' >> beam.ParDo(AddTimestampFn())\n",
-    "     | # YOUR CODE HERE \n",
-    "     | # YOUR CODE HERE \n",
-    "     | # YOUR CODE HERE \n",
+    "     # | # YOUR CODE HERE \n",
+    "     # | # YOUR CODE HERE \n",
+    "     # | # YOUR CODE HERE \n",
     "     | beam.Map(print))"
    ]
   },
@@ -672,8 +680,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "('🌽', 1)\n",
+      "('🥕', 7)\n",
+      "('🐰', 2)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
@@ -701,7 +719,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
     }
    }
   },
