Exercise #6  - Advanced Notebook.
Updated the example to include two steps:
- toggle a window with no tigger on/off
- modify the global window to use a trigger that fires after n items are counted.

--- a/apache-beam-lab-advanced.ipynb
+++ b/apache-beam-lab-advanced.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -661,17 +661,27 @@
    "cell_type": "markdown",
    "source": [
     "### Exercise 6 - Count events using global windows\n",
-    "In this example, lets try counting events that occur in a global window. \n",
+    "In this example, lets try counting events that occur in a global window:\n",
+    "\n",
+    "1. Try running the example as is, and then running it after uncommenting the \n",
+    "`beam.WindowInto(beam.window.GlobalWindows())` line. \n",
+    "2. Next try adding a trigger to the global window so that you only count events when at least 3 of them have arrived. \n",
     "\n",
     "#### Hints\n",
     "\n",
-    "You need to use a Glboal Window: beam.window.GlobalWindows()\n",
+    "- You need to use a Global Window: beam.window.GlobalWindows()\n",
+    "- You can set a trigger on the window using the `trigger` and `accumulation_mode` keywords on the `WindowInto` \n",
+    "transform. For example: `beam.WindowInto(beam.window.GlobalWindows(), trigger=Repeatedly(AfterCount(1)), accumulation_mode=AccumulationMode.ACCUMULATING)`\n",
     "\n",
     "#### Expected Output\n",
     "```\n",
     "('🌽', 1)\n",
     "('🥕', 7)\n",
     "('🐰', 2)\n",
+    "```\n",
+    "or \n",
+    "```\n",
+    "('🥕', 7)\n",
     "```"
    ],
    "metadata": {
@@ -680,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
@@ -693,6 +703,8 @@
     }
    ],
    "source": [
+    "from apache_beam.transforms.trigger import Repeatedly, AfterCount, AccumulationMode\n",
+    "\n",
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
     "          FoodSightingEvent('1', '🌽', dtime(hour=1, min=1, sec=5)),\n",
@@ -711,9 +723,10 @@
     "       ])\n",
     "   \n",
     "   | 'Add timestamps' >> beam.ParDo(AddTimestampFn())\n",
-    "   | # YOUR CODE HERE \n",
-    "   | # YOUR CODE HERE \n",
-    "   | # YOUR CODE HERE \n",
+    "   # | beam.WindowInto(beam.window.GlobalWindows())\n",
+    "   | beam.Map(lambda element: element.food)\n",
+    "   | beam.combiners.Count.PerElement()\n",
+    "\n",
     "   | beam.Map(print))"
    ],
    "metadata": {
