CP: remove output from adavanced lab notebook

--- a/apache-beam-lab-advanced.ipynb
+++ b/apache-beam-lab-advanced.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -365,11 +365,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -392,39 +392,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n          });\n        }"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": "\n        var import_html = () => {\n          ['https://raw.githubusercontent.com/PAIR-code/facets/1.0.0/facets-dist/facets-jupyter.html'].forEach(href => {\n            var link = document.createElement('link');\n            link.rel = 'import'\n            link.href = href;\n            document.head.appendChild(link);\n          });\n        }\n        if ('import' in document.createElement('link')) {\n          import_html();\n        } else {\n          var webcomponentScript = document.createElement('script');\n          webcomponentScript.src = 'https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.3.3/webcomponents-lite.js';\n          webcomponentScript.type = 'text/javascript';\n          webcomponentScript.onload = function(){\n            import_html();\n          };\n          document.head.appendChild(webcomponentScript);\n        }"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "text": [
-      "2020-03-04 00:00:00 - 1 - 🌽\n",
-      "2020-03-05 00:00:00 - 2 - 🌽\n",
-      "2020-03-06 00:00:00 - 3 - 🥕\n",
-      "2020-03-07 00:00:00 - 4 - 🥕\n",
-      "2020-03-08 00:00:00 - 5 - 🌽\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
+   "outputs": [],
    "source": [
     "inputs = [\n",
     "    FoodSightingEvent('1', '🌽', dtime(yy=2020, mm=3, day=4)),\n",
@@ -472,22 +446,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-3bb321509d61>\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    | # YOUR CODE HERE\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ],
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-3bb321509d61>, line 20)",
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
@@ -550,28 +515,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "('🌽', 1)\n",
-      "('🌽', 1)\n",
-      "('🍏', 1)\n",
-      "('🍏', 1)\n",
-      "('🍕', 1)\n",
-      "('🍕', 1)\n",
-      "('🐰', 1)\n",
-      "('🐰', 1)\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
@@ -615,23 +565,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "('🌽', 4)\n",
-      "('🥕', 5)\n",
-      "('🐰', 1)\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with beam.Pipeline() as p:\n",
     "  (p | beam.Create([\n",
@@ -659,6 +599,7 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercise 6 - Count events using global windows\n",
     "In this example, lets try counting events that occur in a global window:\n",
@@ -683,25 +624,18 @@
     "```\n",
     "('🥕', 7)\n",
     "```"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "('🌽', 1)\n",
-      "('🥕', 7)\n",
-      "('🐰', 2)\n"
-     ],
-     "output_type": "stream"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from apache_beam.transforms.trigger import Repeatedly, AfterCount, AccumulationMode\n",
     "\n",
@@ -727,57 +661,6 @@
     "   | beam.Map(lambda element: element.food)\n",
     "   | beam.combiners.Count.PerElement()\n",
     "\n",
-    "   | beam.Map(print))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### References\n",
-    "Apache Beam Katas\n",
-    "\n",
-    "https://beam.apache.org/documentation/programming-guide"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "with beam.Pipeline() as p:\n",
-    "  (p | beam.Create([\n",
-    "          FoodSightingEvent('1', '🌽', dtime(hour=1, min=1, sec=5)),\n",
-    "          FoodSightingEvent('2', '🥕', dtime(hour=1, min=1, sec=15)),\n",
-    "          FoodSightingEvent('3', '🥕', dtime(hour=1, min=1, sec=16)),\n",
-    "          FoodSightingEvent('4', '🐰', dtime(hour=1, min=1, sec=59)),\n",
-    "      \n",
-    "          FoodSightingEvent('5', '🥕', dtime(hour=1, min=31, sec=18)),\n",
-    "          FoodSightingEvent('6', '🥕', dtime(hour=1, min=31, sec=36)),\n",
-    "      \n",
-    "          FoodSightingEvent('7', '🥕', dtime(hour=1, min=34, sec=1)),\n",
-    "          FoodSightingEvent('8', '🥕', dtime(hour=1, min=34, sec=18)),\n",
-    "          FoodSightingEvent('9', '🥕', dtime(hour=1, min=34, sec=51)),\n",
-    "      \n",
-    "          FoodSightingEvent('10', '🐰', dtime(hour=2, min=34, sec=51)),\n",
-    "       ])\n",
-    "   \n",
-    "   | 'Add timestamps' >> beam.ParDo(AddTimestampFn())\n",
-    "   | # YOUR CODE HERE \n",
-    "   | # YOUR CODE HERE \n",
-    "   | # YOUR CODE HERE \n",
     "   | beam.Map(print))"
    ]
   },
@@ -813,10 +696,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
